[package]
name = "fiddlesticks"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
sysinfo = "0.29.11"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
